--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@ Aden
     <h2>X Assignments</h2>
     <ol>
         <li><a href="webcam-basic.html">webcam-basic.html</a></li>
-        <li><a href="html-clicker.html">html-clicker.html</a></li>
+        <li><a href="html-clicker-idk.html">html-clicker-idk.html</a></li>
         <li><a href="list-table.html">list-table.html</a></li>
         <li><a href="timer-time.html">timer-time.html</a></li>
         <li><a href="snake.html">snake.html</a></li>
