--- a/public/html-clicker-idk.html
+++ b/public/html-clicker-idk.html
@@ -51,10 +51,9 @@
     <button id="button" onclick="incrementCounter()">Click Me</button>
     
     <textarea id="explanation" readonly>
-        This is a simple counter web application. 
-        Clicking the "Click Me" button increments the counter displayed above. 
-        The value updates in real-time using JavaScript to dynamically change the 
-        inner text of the counter div element.
+         <div id="counter">0</div>
+    <button id="button" onclick="incrementCounter()">Click Me</button> makes it to where each time you click on the
+        button the counter goes up
     </textarea>
 
     <script>
