--- a/public/something.html
+++ b/public/something.html
@@ -563,200 +563,38 @@
             }
         }
 
-       <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun HTML Page with Multiple Features</title>
-    <style>
-        body {
-            background-color: #FFCCCB;
-            color: #333;
-            font-family: 'Arial', sans-serif;
-            text-align: center;
-            padding: 20px;
-            margin: 0;
-            transition: background-color 0.5s;
-        }
-
-        h1 {
-            font-size: 48px;
-            color: #FF69B4;
-            margin-bottom: 20px;
-        }
-
-        button {
-            padding: 10px 15px;
-            font-size: 18px;
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            cursor: pointer;
-            border-radius: 8px;
-            margin: 10px;
-            transition: background-color 0.3s, transform 0.3s;
-        }
-
-        button:hover {
-            background-color: #45a049;
-            transform: scale(1.05);
-        }
-
-        .container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .card {
-            background-color: white;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
-        }
-
-        canvas {
-            border: 1px solid #ccc;
-            background: white;
-            cursor: crosshair;
-            display: block;
-            margin: 0 auto;
-        }
-    </style>
-</head>
-<body>
-    <h1>Welcome to My Fun HTML Page!</h1>
-
-    <div class="container">
-        <!-- Simple Drawing Tool -->
-        <div class="card">
-            <h3>Simple Drawing Tool</h3>
-            <input type="color" id="colorPicker" value="#000000" onchange="updateColor()" />
-            <label for="colorPicker">Select Marker Color</label>
-            <canvas id="drawingCanvas" width="300" height="200"></canvas>
-            <br />
-            <button onclick="clearCanvas()">Clear Canvas</button>
-        </div>
-
-        <!-- Other Features (...keeping previously defined features...) -->
-        <div class="card">
-            <p id="dynamicText">Click the button below to change this text!</p>
-            <button onclick="changeText()">Click Me!</button>
-        </div>
-
-        <div class="card">
-            <input type="text" id="userInput" placeholder="Type something fun!" />
-            <button onclick="showInput()">Show Input</button>
-            <div class="quote" id="funQuote">"Life is short, smile while you still have teeth!"</div>
-            <button onclick="changeQuote()">Get a New Quote</button>
-        </div>
-
-        <div class="card">
-            <input type="color" id="bgColorPicker" onchange="changeBackgroundColor(this.value)" />
-            <label for="bgColorPicker">Pick a Background Color</label>
-        </div>
-
-        <div class="card">
-            <button onclick="generateJoke()">Tell Me a Joke</button>
-            <div class="joke" id="jokeDisplay">Click the button for a joke!</div>
-        </div>
-
-        <div class="card">
-            <input type="file" id="imageUpload" accept="image/*" onchange="displayImage(event)" multiple />
-            <div class="carousel" id="imageCarousel"></div>
-        </div>
-
-        <!-- Add the rest of your existing features here -->
-        <!-- ... -->
-    </div>
-
-    <script>
+        // Simple Drawing Tool
         const canvas = document.getElementById('drawingCanvas');
         const ctx = canvas.getContext('2d');
-        let isDrawing = false;
-        let lastX = 0;
-        let lastY = 0;
-        let strokeColor = '#000000';
+        let drawing = false;
 
-        // Update the stroke color based on the color picker input
-        function updateColor() {
-            const colorPicker = document.getElementById('colorPicker');
-            strokeColor = colorPicker.value;
+        canvas.addEventListener('mousedown', (event) => {
+            drawing = true;
+            ctx.moveTo(event.offsetX, event.offsetY); // Move to the clicked position
+        });
+
+        canvas.addEventListener('mouseup', () => {
+            drawing = false;
+            ctx.beginPath(); // Reset path to prevent connecting lines
+        });
+
+        canvas.addEventListener('mousemove', draw);
+
+        function draw(event) {
+            if (!drawing) return;
+            ctx.lineWidth = 2;
+            ctx.lineCap = 'round';
+            ctx.strokeStyle = 'black';
+
+            ctx.lineTo(event.offsetX, event.offsetY); // Draw line to the mouse position
+            ctx.stroke();
+            ctx.beginPath(); // Begin a new path
+            ctx.moveTo(event.offsetX, event.offsetY); // Move to the current mouse position
         }
 
-        // Mouse down event
-        canvas.addEventListener('mousedown', (e) => {
-            isDrawing = true;
-            [lastX, lastY] = getMousePosition(e);
-        });
-
-        // Mouse move event
-        canvas.addEventListener('mousemove', (e) => {
-            if (!isDrawing) return;
-            const [x, y] = getMousePosition(e);
-
-            ctx.beginPath();
-            ctx.moveTo(lastX, lastY); // Move to last coordinates
-            ctx.lineTo(x, y); // Draw line to current coordinates
-            ctx.strokeStyle = strokeColor; // Set stroke color from color picker
-            ctx.lineWidth = 2; // Set line width
-            ctx.stroke(); // Apply the stroke
-            ctx.closePath();
-
-            [lastX, lastY] = [x, y]; // Update last coordinates
-        });
-
-        // Mouse up event
-        canvas.addEventListener('mouseup', () => {
-            isDrawing = false;
-        });
-
-        // Mouse leave event
-        canvas.addEventListener('mouseleave', () => {
-            isDrawing = false;
-        });
-
-        // Clear the canvas
         function clearCanvas() {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
         }
-
-        // Get mouse position relative to canvas
-        function getMousePosition(event) {
-            const rect = canvas.getBoundingClientRect();
-            const x = event.clientX - rect.left; // Adjust for canvas position
-            const y = event.clientY - rect.top; // Adjust for canvas position
-            return [x, y];
-        }
-        
-        // Add your other existing JavaScript functionality here...
-        
-        // Example: Placeholder functions for other features
-        function changeText() {
-            const textElement = document.getElementById('dynamicText');
-            textElement.innerHTML = "🎉 You just clicked the button! 🎉";
-        }
-
-        function showInput() {
-            const inputElement = document.getElementById('userInput');
-            const textElement = document.getElementById('dynamicText');
-            textElement.innerHTML = `You entered: "${inputElement.value}"`;
-            inputElement.value = ''; // Clear the input after showing
-        }
-
-        // More functions for your features... 
-    </script>
-</body>
-</html>
 
         // Currency Converter
         async function convertCurrency() {
