--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,8 @@ Aden
          <li><a href="t1a10-loops-Aden.html">t1a10-loops-Aden.html</a></li>
         <li><a href="t1a11-arrays-Aden.html">t1a11-arrays-Aden.html</a></li>
          <li><a href="t1a12-objects-Aden.html">t1a12-objects-Aden.html</a></li>
+          <li><a href="t1a13-json-Aden.html">t1a13-json-Aden.html</a></li>
+          <li><a href="t1a14-objects-arrays-Aden.html">t1a14-objects-arrays-Aden.html</a></li> 
     </ul>
 
     <h2>X Assignments</h2>
