--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,32 +1,29 @@
 <h2 align=center>t1a14-objects-arrays-Aden.html</h2> 
 
 <pre>
-  let myPerson = {
-      "firstName": "Aden",
-      "lastName" : "Byrne",
-      "age" : 50,
-      "eyeColor": "blue"
-       }
-  
+let myPerson = {
+    "firstName": "Aden",
+    "lastName": "Byrne",
+    "age": 50,
+    "eyeColor": "blue"
+}
 </pre>
 
-Nothing: <input type=text id" myText01" value="Useless at the moment"><br>
+Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
 
+<input type="button" value="Example object set and show" onClick="{
+    let myPerson = {
+        'firstName': 'Aden',
+        'lastName': 'Byrne',
+        'age': 50,
+        'eyeColor': 'blue'
+    }
 
-<input type=button value="Example object set and show" onClick="{
-
-   let myPerson = {
-        'firstName' : 'Aden',
-        'lastName'  : 'Byrne',
-        'age'       : 50,
-        'eyeColor'  : 'blue'
-       }
-
-         document.getElementById('myDiv01).innerHTML = '<br>myPerson Object has
-      properties: <br>'
-         document.getElementById('myDiv01).innerHTML += 'firstName: '  +
-      myPerson.firstName + '<br>'
-           document.getElementById('myDiv01).innerHTML += 'You do the others <br> '
-      }">
-      <div id="myDiv01">...</div>
-      <br>
+    document.getElementById('myDiv01').innerHTML = '<br>myPerson Object has properties: <br>';
+    document.getElementById('myDiv01').innerHTML += 'firstName: ' + myPerson.firstName + '<br>';
+    document.getElementById('myDiv01').innerHTML += 'lastName: ' + myPerson.lastName + '<br>';
+    document.getElementById('myDiv01').innerHTML += 'age: ' + myPerson.age + '<br>';
+    document.getElementById('myDiv01').innerHTML += 'eyeColor: ' + myPerson.eyeColor + '<br>';
+}">
+<div id="myDiv01">...</div>
+<br>
