--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -9,7 +9,7 @@ let myPerson = {
 }
 </pre>
 
-Nothing: <input type="text" id="myText01" value="Useless at the moment"><br>
+Nothing: <input type="text" id="myText01" value="Load"><br>
 
 <input type="button" value="Example object set and show" onClick="{
     let myPerson = {
