--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -27,3 +27,43 @@ Nothing: <input type="text" id="myText01" value="Load"><br>
 }">
 <div id="myDiv01">...</div>
 <br>
+
+
+
+    <script>
+        // Global Variables for Array
+        let myMax = 6;
+        let myArray = new Array(myMax);
+
+        function setArray() {
+            myArray[0] = 'Aden';
+            myArray[1] = 'Mary';
+            myArray[2] = 'John';
+            document.getElementById('myDiv01').innerHTML = 'You set the array';
+        }
+
+        function showArray() {
+            document.getElementById('myDiv01').innerHTML = '';
+            for (let myLoop = 0; myLoop < 3; myLoop++) {
+                document.getElementById('myDiv01').innerHTML += 'myArray[' + myLoop + '] = ' + myArray[myLoop] + '<br>';
+            }
+        }
+
+        function changeBackgroundColor() {
+            const colorPicker = document.getElementById('colorPicker');
+            document.body.style.backgroundColor = colorPicker.value;
+        }
+    </script>
+    </head>
+<body>
+
+
+    <line class="container">
+        <label for="myFirstName">Input:</label>
+        <input type="text" id="myFirstName" value="Aden"><br>
+
+        <input type="button" value="Set Array" onClick="setArray()">
+        <input type="button" value="Show Array" onClick="showArray()"><br>
+    </line>
+
+    <div id="myDiv01">...</div>
