--- a/public/t1a14-objects-arrays-Aden.html
+++ b/public/t1a14-objects-arrays-Aden.html
@@ -1,1 +1,21 @@
 <h2 align=center>t1a14-objects-arrays-Aden.html</h2> 
+
+<h1 align=center›ta14-objects-and-arrays-fred.html</h1>
+Show your research about objects and arrays in the textarea here<or>
+‹ textarea rows=4 cols=70>
+let myArray = [5, 2, 8, 2, 1];
+let myObject = {name: 'John', age: 30, profession: 'Developer'};
+let myObject = {
+name:
+'Alice'
+hobbies: ['reading', 'coding', 'hiking'], // Array inside object 
+  age: 25
+｝；
+let myArray = [
+{ name: 'Bob', age: 28 },
+¿ name: 'Charlie', age: 32 }
+  ];
+// Object inside array
+</textarea><br><br>
+Make 2 buttons and a div. The first button labelled "Array with Object in it" the 2nd button labelled "Object with Array in it"<br>‹br>
+and
