--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -7,42 +7,30 @@
 </head>
 <body>
 
-<textarea cols="70" rows="5" id="jsonExplanation" readonly></textarea>
+<textarea cols="70" rows="5" id="jsonExplanation"></textarea>
 <br><br>
-<label for="myText1">Enter a JSON returning URL:</label>
-<input type="text" id="myText1" value="https://randomfox.ca/floof/">
-<input type="button" value="Show JSON" onclick="fetchData()"><br><br>
+Enter a JSON returning URL: <input type="text" id="myText1" value="https://randomfox.ca/floof/">
+<input type="button" value="show JSON" onclick="fetchData()"><br><br>
 
-<select id="jsonOptions" size="1" onchange="updateUrl(this.value)">
-    <option value="https://randomfox.ca/floof/">Randomfox</option>
+<select size="1" onchange="myShowJSON(this.value)">
+    <option value="https://ibb.co/PZPwzLg">Randomfox</option>
     <option value="https://dog.ceo/api/breeds/image/random">Dog CEO</option>
     <!-- Add more JSON returning URLs here -->
 </select><br><br>
 
-<div id="myDiv1">Fetched JSON will appear here.</div>
+<div id="myDiv1">...</div>
 
 <script>
-async function fetchData() {
-    const url = document.getElementById('myText1').value;
-    try {
-        const response = await fetch(url);
-        
-        if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
-        }
-
-        const data = await response.json();
-        console.log(data);
-        document.getElementById('myDiv1').innerHTML = JSON.stringify(data, null, 2); // Displays the fetched JSON
-    } catch (error) {
-        console.error('Fetch error:', error);
-        document.getElementById('myDiv1').textContent = 'Error fetching data: ' + error.message;
-    }
+function myShowJSON(myIn) {
+    document.getElementById('myDiv1').innerHTML = `Sent: ${myIn}`;
 }
 
-function updateUrl(selectedUrl) {
-    document.getElementById('myText1').value = selectedUrl;
-    document.getElementById('myDiv1').innerHTML = `Selected URL: ${selectedUrl}`;
+async function fetchData() {
+    const url = document.getElementById('myText1').value;
+    const response = await fetch(url);
+    const data = await response.json();
+    console.log(data);
+    document.getElementById('myDiv1').innerHTML = JSON.stringify(data, null, 2); // Displays the fetched JSON
 }
 
 // Explanation of JSON compared to JavaScript objects
