--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -7,34 +7,58 @@
 </head>
 <body>
 
-<textarea cols="70" rows="5" id="jsonExplanation"></textarea>
-<br><br>
-Enter a JSON returning URL: <input type="text" id="myText1" value="https://randomfox.ca/floof/">
-<input type="button" value="show JSON" onclick="fetchData()"><br><br>
+<textarea cols="70" rows="5" id="jsonExplanation" readonly></textarea>
+<br>
+<label for="myText1">Enter a JSON returning URL:</label>
+<input type="text" id="myText1" value="https://randomfox.ca/floof/">
+<input type="button" value="Show JSON" onclick="fetchData()"><br><br>
 
-<select size="1" onchange="myShowJSON(this.value)">
-    <option value="https://ibb.co/PZPwzLg">Randomfox</option>
+<select id="jsonOptions" size="1" onchange="updateUrl(this.value)">
+    <option value="https://randomfox.ca/floof/">RandomFox</option>
     <option value="https://dog.ceo/api/breeds/image/random">Dog CEO</option>
     <!-- Add more JSON returning URLs here -->
 </select><br><br>
 
-<div id="myDiv1">...</div>
+<div id="myDiv1">Fetched JSON will appear here.</div>
+<img id="fetchedImage" src="" alt="Fetched Image" style="display:none; margin-top: 20px; max-width: 100%; height: auto;"/>
 
 <script>
-function myShowJSON(myIn) {
-    document.getElementById('myDiv1').innerHTML = `Sent: ${myIn}`;
-}
-
 async function fetchData() {
     const url = document.getElementById('myText1').value;
-    const response = await fetch(url);
-    const data = await response.json();
-    console.log(data);
-    document.getElementById('myDiv1').innerHTML = JSON.stringify(data, null, 2); // Displays the fetched JSON
+    try {
+        const response = await fetch(url);
+        
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+        }
+
+        const data = await response.json();
+        console.log(data);
+        document.getElementById('myDiv1').innerHTML = JSON.stringify(data, null, 2); // Displays the fetched JSON
+
+        // Assuming the returned data contains an image URL
+        if (data.image) { // Check if the fetched data contains 'image' property
+            const imageElement = document.getElementById('fetchedImage');
+            imageElement.src = data.image; // Set the source of the image to the fetched image URL
+            imageElement.style.display = 'block'; // Show the image element
+        } else {
+            // Handle cases where there's no image
+            document.getElementById('fetchedImage').style.display = 'none'; // Hide image if no URL is returned
+        }
+    } catch (error) {
+        console.error('Fetch error:', error);
+        document.getElementById('myDiv1').textContent = 'Error fetching data: ' + error.message;
+        document.getElementById('fetchedImage').style.display = 'none'; // Hide image on error
+    }
+}
+
+function updateUrl(selectedUrl) {
+    document.getElementById('myText1').value = selectedUrl;
+    document.getElementById('myDiv1').innerHTML = `Selected URL: ${selectedUrl}`;
 }
 
 // Explanation of JSON compared to JavaScript objects
-document.getElementById('jsonExplanation').value = "JSON (JavaScript Object Notation) is a lightweight data interchange format that is easy for humans to read and write and easy for machines to parse and generate. JSON is a text format that is completely language independent but uses conventions that are familiar to programmers of the C family of languages, which includes C, C++, C#, Java, JavaScript, Perl, Python, and many others. In contrast, JavaScript objects are dynamic and can contain functions, whereas JSON is purely a data format and cannot contain functions or methods.";
+document.getElementById('jsonExplanation').value = "JSON (JavaScript Object Notation) is a lightweight data interchange format that is easy for humans to read and write and easy for machines to parse and generate. JSON is a text format that is completely language independent but uses conventions that are familiar to programmers of the C family of languages. In contrast, JavaScript objects are dynamic and can contain functions, whereas JSON is purely a data format and cannot contain functions or methods.";
 </script>
 
 </body>
