--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -10,7 +10,7 @@
 <textarea cols="70" rows="5" id="jsonExplanation" readonly></textarea>
 <br>
 <label for="myText1">Enter a JSON returning URL:</label>
-<input type="text" id="myText1" value="https://randomfox.ca/floof/">
+<input type="text" id="myText1" value="https://dog.ceo/api/breeds/image/random">
 <input type="button" value="Show JSON" onclick="fetchData()"><br><br>
 
 <select id="jsonOptions" size="1" onchange="updateUrl(this.value)">
@@ -36,10 +36,10 @@ async function fetchData() {
         console.log(data);
         document.getElementById('myDiv1').innerHTML = JSON.stringify(data, null, 2); // Displays the fetched JSON
 
-        // Assuming the returned data contains an image URL
-        if (data.image) { // Check if the fetched data contains 'image' property
+        // Check if the fetched data contains an 'message' property with the image URL
+        if (data.message) {
             const imageElement = document.getElementById('fetchedImage');
-            imageElement.src = data.image; // Set the source of the image to the fetched image URL
+            imageElement.src = data.message; // Set the source of the image to the fetched image URL
             imageElement.style.display = 'block'; // Show the image element
         } else {
             // Handle cases where there's no image
