--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 <textarea cols="70" rows="5" id="jsonExplanation" readonly></textarea>
 <br>
 <label for="myText1">Enter a JSON returning URL:</label>
-<input type="text" id="myText1" value="https://dog.ceo/api/breeds/image/random">
+<input type="text" id="myText1" value="https://randomfox.ca/floof/">
 <input type="button" value="Show JSON" onclick="fetchData()"><br><br>
 
 <select id="jsonOptions" size="1" onchange="updateUrl(this.value)">
@@ -36,14 +36,24 @@ async function fetchData() {
         console.log(data);
         document.getElementById('myDiv1').innerHTML = JSON.stringify(data, null, 2); // Displays the fetched JSON
 
-        // Check if the fetched data contains an 'message' property with the image URL
-        if (data.message) {
-            const imageElement = document.getElementById('fetchedImage');
-            imageElement.src = data.message; // Set the source of the image to the fetched image URL
+        // Determine the image source based on the API
+        let imageUrl;
+        if (data.image) {
+            // Random Fox API structure
+            imageUrl = data.image;
+        } else if (data.message) {
+            // Dog CEO API structure
+            imageUrl = data.message;
+        }
+
+        // Update the image element if an image URL is found
+        const imageElement = document.getElementById('fetchedImage');
+        if (imageUrl) {
+            imageElement.src = imageUrl; // Set the source of the image to the fetched image URL
             imageElement.style.display = 'block'; // Show the image element
         } else {
             // Handle cases where there's no image
-            document.getElementById('fetchedImage').style.display = 'none'; // Hide image if no URL is returned
+            imageElement.style.display = 'none'; // Hide image if no URL is returned
         }
     } catch (error) {
         console.error('Fetch error:', error);
