--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -17,7 +17,7 @@
     <option value="https://randomfox.ca/floof/">RandomFox</option>
     <option value="https://dog.ceo/api/breeds/image/random">Dog CEO</option>
     <option value="https://api.thecatapi.com/v1/images/search">Random Cat</option>
-    <option value="https://penguinscantfly.com/api/penguins/random">Random Penguin</option>
+    <option value="https://unsplash.com/images/animals/penguin">Random Penguin</option>
 </select><br><br>
 
 <div id="myDiv1">Fetched JSON will appear here.</div>
